--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,21 @@ p {
     line-height: 1.4;
 }
 
+.headercontainer {
+    width:100%;
+    display: flex;
+    justify-content:center;
+    
+}
+.headercontainer div{
+    width:100%;
+}
+
+.highwayimage {
+    margin-left:24%;
+    margin-top:5%;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -90,6 +105,7 @@ p {
     border-bottom: 1px dashed black;
 }
 
+
 .middle-content h2 {
     padding: 0 2%;
     margin-bottom: 0;
@@ -110,6 +126,10 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.box1 {
+    background-color: teal;
 }
 
 .bottom-content {
