--- a/css/index.css
+++ b/css/index.css
@@ -66,14 +66,12 @@ p {
     line-height: 1.4;
 }
 
-.headercontainer {
-    width:100%;
-    display: flex;
-    justify-content:center;
+.headercontainer{
+    display:flex;
+    justify-content:space-around;
     
-}
-.headercontainer div{
-    width:100%;
+
+
 }
 
 .highwayimage {
@@ -117,22 +115,49 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
+.middle-content .boxes .box{
+
+    width:12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
+    /* background-color: black; */
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.box1 {
-    background-color: teal;
+div .box1{
+    background-color:teal;
 }
-
-.bottom-content {
+div .box2{
+    background-color:gold;
+}
+div .box3{
+    background-color:cadetblue;
+}
+div .box4{
+    background-color:coral;
+}
+div .box5{
+    background-color:crimson;
+}
+div .box6{
+    background-color:forestgreen;
+}
+div .box7{
+    background-color:darkorchid;
+}
+div .box8{
+    background-color:hotpink;
+}
+div .box9{
+    background-color:indigo;
+}
+div .box10{
+    background-color:dodgerblue;
+}
+.bottom-content{
     display: flex;
     margin: 0 2% 20px;
     justify-content: space-around;
