--- a/css/about.css
+++ b/css/about.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
     vertical-align: baseline;
+    
 
 }
 /* HTML5 display-role reset for older browsers */
@@ -70,7 +71,7 @@ p {
 
 .top {
     width:50%;
-    margin-left:25%;
+    margin-left:23%;
     margin-bottom:3%;
   
   
@@ -84,71 +85,144 @@ p {
 
 .logolinks a{
    margin-top:3%;
+   text-decoration:none;
+   color:black;
+}
+.logolinks a:hover{
+    color:white;
+    background-color:black;
 }
 
 
 .cityimage {
-    margin-left:25%
+    margin-left:23%
 
 }
 
 .about-page {
     display:flex;
     justify-content:space-around;
+    margin-left:1%;
+
     
 }
 .about {
-    width:50%;
+    margin:1%;
+    width:53%;
     border-bottom: 1px dashed black;
     margin-bottom:2%;
+   
+}
+.about p{
+    margin-bottom:3%;
 }
 .middle-bigcontainer {
     display:flex;
     flex-wrap:wrap;
+    justify-content:center;
+
 
     
 }
-.middle-bigcontainer a{
-    border: 2px solid black;
-    border-radius:15%;
-    text-decoration:none;
-    margin-top:3%;
+.middlebig2{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
 }
 
 .middle-con1 {
-    display:flex;
-    justify-content:space-between;
-    margin-left:23%;
-    width:23%;
-    border-bottom: 2px dashed black;
+    margin-left:2%;
+    width:25%;
+    border-bottom: 1px dashed black;
     margin-bottom:3%;
     margin-right:3%;
     padding:2%;
 }
 
+.middle-con1 p{
+    margin-bottom:5%;
+}
+
+.middle-con1 a{
+    border:2px solid black;
+    padding:3%;
+    text-decoration: none;
+    border-radius:15%;
+}
+.middle-con2 p{
+    margin-bottom:5%;
+}
+
+.middle-con2 a{
+    border:2px solid black;
+    padding:3%;
+    text-decoration: none;
+    border-radius:15%;
+}
+.middle-con3 p{
+    margin-bottom:5%;
+}
+
+.middle-con3 a{
+    border:2px solid black;
+    padding:3%;
+    text-decoration: none;
+    border-radius:15%;
+}
+.middle-con4 p{
+    margin-bottom:5%;
+}
+
+.middle-con4 a{
+    border:2px solid black;
+    padding:3%;
+    text-decoration: none;
+    border-radius:15%;
+    text-align:center;
+    
+}
+
+
 .middle-con2{
-    display:flex;
-    justify-content:space-between;
-    margin-left:23%;
-    width:23%;
-    border-bottom: 2px dashed black;
+    width:25%;
+    border-bottom: 1px dashed black;
     margin-bottom:3%;
     margin-right:3%;
     padding:2%;
 }
+
+.middle-con3{
+    margin-left:2%;
+    width:25%;
+    border-bottom: 1px dashed black;
+    margin-bottom:3%;
+    margin-right:3%;
+    padding:2%;
+}
+
+.middle-con4{
+    width:25%;
+    border-bottom: 1px dashed black;
+    margin-bottom:3%;
+    margin-right:3%;
+    padding:2%;
+}
+
+
 
 .bottom {
     display:flex;
     flex-direction:space-around;
 }
 .worktogether {
-    width:50%;
-    margin-left:25%;
+    width:53%;
+    margin-left:24%;
+    margin-bottom:3%;
 }
 
 footer {
-    margin-left:25%;
-    width: 50%;
+    margin-left:23%;
+    width: 55%;
     background: black;
     display:flex;
 }
@@ -166,4 +240,9 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+footer nav a:hover{
+    color:black;
+    background-color:white;
 }
